acomodando el navbar

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -3,10 +3,10 @@
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 0.3fr 1fr 0.1fr 0.01fr;
     grid-template-areas: 
-            "portada  portada  portada"
-            "nucleo  nucleo  nucleo"
-            "nucleo  nucleo  nucleo"
-            "final    final    final";
+        "navbar navbar navbar"
+        "portada portada portada"
+        "nucleo nucleo nucleo"
+        "final final final";
 }
 
 .portada {
