--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,8 @@ body {
 }
 
 #root {
-  max-width: 80rem;      /* 1280px = 80rem */
+  max-width: 80rem;   
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
