--- a/src/App.css
+++ b/src/App.css
@@ -4,43 +4,42 @@ body {
 }
 
 #root {
-  max-width: 80rem;   
-  margin: 0 auto;
+  margin: 0;
   text-align: center;
 }
 
 .logo {
-  height: 6rem;
-  padding: 1.5rem;
-  will-change: filter;
-  transition: filter 300ms;
+    height: 6rem;
+    padding: 1.5rem;
+    will-change: filter;
+    transition: filter 300ms;
 }
 .logo:hover {
-  filter: drop-shadow(0 0 2rem #646cffaa);
+    filter: drop-shadow(0 0 2rem #646cffaa);
 }
 .logo.react:hover {
-  filter: drop-shadow(0 0 2rem #61dafbaa);
+    filter: drop-shadow(0 0 2rem #61dafbaa);
 }
 
 @keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+    a:nth-of-type(2) .logo {
+        animation: logo-spin infinite 20s linear;
+    }
 }
 
 .card {
-  padding: 2rem;
+    padding: 2rem;
 }
 
 .read-the-docs {
-  color: #888;
+    color: #888;
 }
